{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "f81348f0-8b8d-4f02-8e1e-5ff18e594ae2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "50e96b25-ca91-41f4-9588-e2a5157e8b2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeColor",
                    "type": "Button",
                    "id": "80cad228-9d59-4bf7-8b9f-bab448342a4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0dfe8969-690b-40cf-898e-e1886a09cfc2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "058065ac-77be-4249-8262-cbc95fab43ca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}